fix(admin): publish uploaded agreements through the actual agreement reader
Signed-off-by: Michael Yingbull <michael@maplecreekmedical.ca>